  are on screen, but only when you are in lockMap.
- pkServer (flag)
  To to 1 if you're playing kRO or on a PK server.
- dcOnMute (flag)
  Disconnect when you have been muted by a GM.
- attackMinPlayerDistance (number)
  Only auto-attack monsters that are at least (number) blocks away from
  other players. (number) is at least 3; if you enter a lower value, Kore
  will treat it as 3.

- route_teleport (flag)
  route_teleport_minDistance (number)
  route_teleport_maxTries (number)

  While walking to other maps, Kore will teleport until it's near a
  portal, if route_teleport is enabled. It will keep teleporting until
  it's at least route_teleport_minDistance steps away from the portal.
  It will attempt to teleport at most route_teleport_maxTries times,
  before falling back to walking.
  It's recommended that you set a value between 100 or 200 for
  route_teleport_minDistance.

New timeouts.txt options:
- ai_attack_unfail 5

Bug fixes:
- Kore can walk on walkable water now (bug #21).
- Don't open shop immediately after login in X-Kore mode (bug #49).
- sitAuto_idle doesn't conflict with shopAuto_open's timeout now (bug #50).
- MO_BODYRELOCATION is now recognized as an area-usage skill.
- Don't display "level 65535" when an area-usage skill is used.
- Incoming Request to join Guild message now displays guild name.
- Alchemist potions aren't called [?254] anymore.
- Cards in equipment in storage weren't being displayed.
- $item->{type} is now set correctly for equipment in storage.
- When following players by name, typing 'follow A' then 'follow B' would
  cause you to still be following A instead of B.
- Fixed a crash when cart inventory is not available (such as during login).
- Fixed chat room creation with non-default usercount, private-flag and passwd
- $config{'char'} eq '' is no longer treated as $config{'char'} == 0
- Route AI should get stuck a lot less now.
- Autostorage will now walk back to the NPC if it fails to teleport back.